prerequisites/sfpowerscripts-artifact/force-app/main/default/objects/SfpowerscriptsArtifactCatalogue__c/SfpowerscriptsArtifactCatalogue__c.object-meta.xml
<CustomObject>
    <label>Sfpowerscripts Artifact Catalogue</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Artifact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sfpowerscripts Artifact Catalogue</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>