prerequisites/sfpowerscripts-artifact/force-app/main/default/objects/SfpowerscriptsArtifactCatalogue__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>