prerequisites/sfpowerscripts-artifact/force-app/main/default/objects/SfpowerscriptsArtifactCatalogue__c/fields/CommitID__c.field-meta.xml
<CustomField>
    <fullName>CommitID__c</fullName>
    <label>Commit ID</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>