prerequisites/sfpowerscripts-artifact/force-app/main/default/objects/SfpowerscriptsArtifactCatalogue__c/fields/PackageName__c.field-meta.xml
<CustomField>
    <fullName>PackageName__c</fullName>
    <label>Package Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>