prerequisites/sfpowerscripts-artifact/force-app/main/default/objects/SfpowerscriptsArtifactCatalogue__c/fields/PackageType__c.field-meta.xml
<CustomField>
    <fullName>PackageType__c</fullName>
    <label>Package Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unlocked</fullName>
            </value>
            <value>
                <fullName>Source</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>