prerequisites/sfpowerscripts-artifact/force-app/main/default/objects/SfpowerscriptsArtifactCatalogue__c/fields/Repo__c.field-meta.xml
<CustomField>
    <fullName>Repo__c</fullName>
    <label>Repo</label>
    <required>true</required>
    <type>Url</type>
</CustomField>