prerequisites/sfpowerscripts-artifact/force-app/main/default/objects/SfpowerscriptsArtifactCatalogue__c/fields/VersionID__c.field-meta.xml
<CustomField>
    <fullName>VersionID__c</fullName>
    <label>Version ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>