prerequisites/sfpowerscripts-artifact/force-app/main/default/objects/SfpowerscriptsArtifactCatalogue__c/validationRules/Version_Id_required_for_Unlocked_package.validationRule-meta.xml
<ValidationRule>
    <fullName>Version_Id_required_for_Unlocked_package</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( PackageType__c, &quot;Unlocked&quot;) &amp;&amp;  VersionID__c == &apos;&apos;</errorConditionFormula>
    <errorDisplayField>VersionID__c</errorDisplayField>
    <errorMessage>Version Id required for Unlocked package</errorMessage>
</ValidationRule>