prerequisites/sfpowerscripts-artifact/force-app/main/default/objects/SfpowerscriptsArtifactCatalogue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Repo__c</columns>
    <columns>Branch__c</columns>
    <columns>Tag__c</columns>
    <columns>PackageType__c</columns>
    <columns>PackageName__c</columns>
    <columns>VersionNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>